--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,17 @@
     </head>
     <body>
 
-        <div class="map"></div>
+        <div id="map"></div>
 
-        <div class="start-container">
-            <div class="">
+        <div id="start-view">
+            <div class="content">
                 <h1>Hur skulle regeringen se ut om ditt kvarter fick bestämma?</h1>
                 <input type="text" placeholder="Var bor du?" id="prompt" />
                 <input type="submit" name="Visa mig den dystra sanningen" />
             </div>
         </div>
 
-        <div class="result-container">
+        <div id="result-view">
             <div class="popup">
                 <h1>Så här hade Sveriges regering sett ut om valdistriktet <b>Enskede Västra 3</b> fått bestämma:</h1>
             </div>
