--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div id="result-view">
-            <div class="popup">
+            <div class="regeringen">
                 <h1>Så här hade Sveriges regering sett ut om valdistriktet <strong>Enskede Västra 3</strong> fått bestämma:</h1>
             </div>
             <footer>
