--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Kvartersregeringen</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+        <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet'>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
 
@@ -20,7 +21,7 @@
             <form role="form">
                 <h1>Hur skulle regeringen se ut om ditt kvarter fick bestämma?</h1>
                 <div class="form-group">
-                    <input type="text" class="form-control input-lg" placeholder="Var bor du?" id="prompt" />
+                    <input type="text" class="form-control input-lg" placeholder="Var bor du?" id="prompt">
                 </div>
                 <div class="form-group">
                     <button type="button" class="btn btn-primary btn-lg btn-block">Visa mig den dystra sanningen</button>
@@ -39,6 +40,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
     </body>
