More design/styling

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet'>
+        <link rel='stylesheet' href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css'>
+        <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700'>
+
         <link rel="stylesheet" href="static/css/bootstrap.min.css">
         <link rel="stylesheet" href="static/css/main.css">
 
@@ -31,10 +33,10 @@
 
         <div id="result-view">
             <div class="regeringen">
-                <h1>Så här hade Sveriges regering sett ut om valdistriktet <strong>Enskede Västra 3</strong> fått bestämma:</h1>
+                <h1>Så här hade regeringen sett ut om valdistriktet <strong>valdistriktsnamn</strong> fått bestämma:</h1>
             </div>
             <footer>
-                <h2>Dela på Twitter och Facebook</h2>
+                <h2>Dela på <a href="">Twitter</a> och <a href="">Facebook</a></h2>
             </footer>
         </div>
 
