--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
                     <input type="text" class="form-control input-lg" placeholder="Var bor du?" id="prompt">
                 </div>
                 <div class="form-group">
-                    <button type="button" class="btn btn-primary btn-lg btn-block">Visa mig den dystra sanningen</button>
+                    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Visa mig den dystra sanningen"/>
                 </div>
             </form>
         </div>
