--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 
         <div id="result-view">
             <div class="regeringen">
-                <h1>Så här hade regeringen sett ut om valdistriktet <strong>valdistriktsnamn</strong> fått bestämma:</h1>
+                <h1>Så här hade regeringen kunnat se ut om valdistriktet <strong>valdistriktsnamn</strong> fått bestämma:</h1>
             </div>
             <footer>
                 <h2>Dela på <a href="">Twitter</a> och <a href="">Facebook</a></h2>
