--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,23 @@
             </form>
         </div>
 
+
         <div id="result-view">
             <div class="regeringen">
                 <h1>Så här hade regeringen kunnat se ut om valdistriktet <strong>valdistriktsnamn</strong> fått bestämma:</h1>
+            </div>
+            <div id="search-again">
+                <h3>Landade du fel? Sök igen.</h3>
+                <div id="search-again-form" style="display:none;">
+                    <form role="form">
+                        <div class="form-group">
+                            <input type="text" class="form-control input-lg" placeholder="Var bor du?" id="prompt">
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" class="btn btn-primary btn-lg btn-block" value="Visa mig den dystra sanningen"/>
+                        </div>
+                    </form>
+                </div>
             </div>
             <footer>
                 <h2>Dela på <a href="">Twitter</a> och <a href="">Facebook</a></h2>
