--- a/app/index.html
+++ b/app/index.html
@@ -23,10 +23,11 @@
             <form role="form">
                 <h1>Hur skulle regeringen se ut om ditt kvarter fick bestämma?</h1>
                 <div class="form-group">
-                    <input type="text" class="form-control input-lg" placeholder="Var bor du?" id="prompt">
+                    <input type="text" class="form-control input-lg" placeholder="Var bor du?" id="search">
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Visa mig den dystra sanningen"/>
+                    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Visa den dystra sanningen" />
+                    <div class="spinner"></div>
                 </div>
             </form>
         </div>
