--- a/app/index.html
+++ b/app/index.html
@@ -34,9 +34,7 @@
 
 
         <div id="result-view">
-            <div class="regeringen">
-                <h1>Så här hade regeringen kunnat se ut om valdistriktet <strong>valdistriktsnamn</strong> fått bestämma:</h1>
-            </div>
+            <div class="government"></div>
             <div id="search-again">
                 <p>Landade du fel? <a href="">Sök igen</a></p>
                 <div id="search-again-form" style="display: none;">
