--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
                             <input type="text" class="form-control" placeholder="Var bor du?">
                         </div>
                         <div class="form-group">
-                            <input type="submit" class="btn btn-primary" value="Visa den dystra sanningen"/>
+                            <input type="submit" class="btn btn-primary" value="Se om det är lika dystert"/>
                         </div>
                     </form>
                 </div>
