--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,10 @@
                 </div>
             </div>
             <footer>
-                <h2>Dela på <a href="">Twitter</a> och <a href="">Facebook</a></h2>
+                <h2>Dela med dina kompisar
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="sv" data-url="http://www.kvartersregeringen.se" data-text="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">Tweet</a>
+                    <a href="">Facebook</a>
+                </h2>
             </footer>
         </div>
 
@@ -58,5 +61,8 @@
         <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
         <script src="static/js/vendor/bootstrap.min.js"></script>
         <script src="static/js/main.js"></script>
+
+        <!-- Twitter -->
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </body>
 </html>
