--- a/app/index.html
+++ b/app/index.html
@@ -50,8 +50,8 @@
             </div>
             <footer>
                 <h2>Dela med dina kompisar
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="sv" data-url="http://www.kvartersregeringen.se" data-text="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">Tweet</a>
-                    <div class="fb-share-button" data-href="http://www.kvartersregeringen.se" data-type="button_count"></div>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="sv" data-url="http://kvartersregeringen.se" data-text="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">Tweet</a>
+                    <div class="fb-like" data-href="http://kvartersregeringen.se" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
                 </h2>
             </footer>
         </div>
