--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,14 @@
 
         <div id="start-view">
             <form role="form">
+                <div class="logo">
+                    <svg version="1.1" width="100" height="100">
+                        <circle fill="#FFFFFF" cx="50" cy="50" r="50" />
+                        <path d="M73.1,76.4l-0.1-32.5H73l-7.5-4.4c0,0-6,6-15.5,6s-15.5-6-15.5-6L27,43.9h-0.1L27,76.5l23.2,13.4L73.1,76.4z M32.6,71.4l-3.8-2.2l0-4.4l3.8,2.2L32.6,71.4z M32.6,62.6l-3.8-2.2l0-4.4l3.8,2.2L32.6,62.6z M32.7,53.7l-3.8-2.2l0-4.4l3.8,2.2L32.7,53.7zM71.2,69.2l-3.8,2.2l0-4.4l3.8-2.2L71.2,69.2z M71.2,60.4l-3.8,2.2l0-4.4l3.8-2.2L71.2,60.4z M71.2,47.1l0,4.4l-3.8,2.2l0-4.4L71.2,47.1z M63.5,64.8L59.7,67l0-4.4l3.8-2.2L63.5,64.8z M52,71.5l0-4.4l3.8-2.2l0,4.4L52,71.5z M55.8,73.7l0,4.4L52,80.3l0-4.4L55.8,73.7z M51.9,62.6l0-4.4l3.8-2.2l0,4.4L51.9,62.6z M63.5,51.5l0,4.4l-3.8,2.2l0-4.4L63.5,51.5z M44.2,56l3.8,2.2l0,4.4l-3.8-2.2L44.2,56z M44.2,64.8l3.8,2.2l0,4.4l-3.8-2.2L44.2,64.8z M44.2,73.7l3.8,2.2l0,4.4l-3.8-2.2L44.2,73.7z M36.5,51.5l3.8,2.2l0,4.4L36.5,56L36.5,51.5z M36.5,60.4l3.8,2.2l0,4.4l-3.8-2.2L36.5,60.4z M40.3,75.8l-3.8-2.2l0,0l0.1-4.4l3.9,2.2L40.3,75.8zM59.6,71.4l3.9-2.2l0.1,4.4l0,0l-3.8,2.2L59.6,71.4z" />
+                        <path fill="#D69616" d="M35.4,36.5L33,16.6l8.9,11.2L50,15.3l8.1,12.5l8.9-11.2l-2.4,19.9c0,0-5.5,6.5-14.6,6.5S35.4,36.5,35.4,36.5z" />
+                    </svg>
+                </div>
+
                 <h1>Hur skulle regeringen se ut om ditt kvarter fick bestämma?</h1>
                 <div class="form-group">
                     <input type="text" class="form-control input-lg" placeholder="Var bor du?">
