Hide Twitter and Facebook buttons

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
                     </svg>
                 </div>
 
+                <h2>Kvartersregeringen</h2>
                 <h1>Hur skulle regeringen se ut om ditt kvarter fick bestämma?</h1>
                 <div class="form-group">
                     <input type="text" class="form-control input-lg" placeholder="Var bor du?">
@@ -57,9 +58,9 @@
                 </div>
             </div>
             <footer>
-                <h2>Dela med dina kompisar
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="sv" data-url="http://kvartersregeringen.se" data-text="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">Tweet</a>
-                    <div class="fb-like" data-href="http://kvartersregeringen.se" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+                <h2>Dela med dina kompisar på <a href="">Twitter</a> och <a href="">Facebook</a>
+                    <!--a href="https://twitter.com/share" class="twitter-share-button" data-lang="sv" data-url="http://kvartersregeringen.se" data-text="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">Tweet</a>
+                    <div class="fb-like" data-href="http://kvartersregeringen.se" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div-->
                 </h2>
             </footer>
         </div>
