--- a/app/index.html
+++ b/app/index.html
@@ -58,9 +58,9 @@
                 </div>
             </div>
             <footer>
-                <h2 class="share">Dela med dina kompisar på <a href="">Twitter</a> och <a href="">Facebook</a>
-                    <!--a href="https://twitter.com/share" class="twitter-share-button" data-lang="sv" data-url="http://kvartersregeringen.se" data-text="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">Tweet</a>
-                    <div class="fb-like" data-href="http://kvartersregeringen.se" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div-->
+                <h2 class="share">Dela med dina kompisar 
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="sv" data-url="http://www.kvartersregeringen.se" data-text="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">Tweet</a>
+                    <div class="fb-like" data-href="http://www.kvartersregeringen.se" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
                 </h2>
                 <button class="btn btn-default about">Om Kvartersregeringen</button>
             </footer>
