Facebook OG tags

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,13 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+        <!-- Facebook -->
+        <meta property="og:title" content="Kvartersregeringen">
+        <meta property="og:description" content="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">
+        <meta property="og:image" content="http://www.kvartersregeringen.se/static/img/facebook.png">
+        <meta property="og:url" content="http://www.kvartersregeringen.se">
+        <meta property="og:type" content="website">
+
         <link rel='stylesheet' href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css'>
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700'>
 
