Twitter card tags

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,13 @@
         <meta property="og:url" content="http://www.kvartersregeringen.se">
         <meta property="og:type" content="website">
 
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="Kvartersregeringen">
+        <meta name="twitter:description" content="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">
+        <meta name="twitter:image:src" content="http://www.kvartersregeringen.se/static/img/twitter.png">
+        <meta name="twitter:domain" content="www.kvartersregeringen.se">
+
         <link rel='stylesheet' href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css'>
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700'>
 
