--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <meta property="og:image" content="http://www.kvartersregeringen.se/static/img/facebook.png">
         <meta property="og:url" content="http://www.kvartersregeringen.se">
         <meta property="og:type" content="website">
+        <meta property="fb:admins" content="532077412" />
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary">
