--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
                 <h2>Kvartersregeringen</h2>
                 <h1>Hur skulle regeringen se ut om ditt kvarter fick bestämma?</h1>
                 <div class="form-group">
-                    <input type="text" class="form-control input-lg" placeholder="Var bor du?">
+                    <input type="text" class="form-control input-lg" placeholder="Vilken gata och ort bort du på?">
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-primary btn-lg btn-block" value="Visa den dystra sanningen" />
