Try going around Facebook image cache

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
         <!-- Facebook -->
         <meta property="og:title" content="Kvartersregeringen">
         <meta property="og:description" content="Hur skulle regeringen se ut om ditt kvarter fick bestämma?">
-        <meta property="og:image" content="http://www.kvartersregeringen.se/static/img/facebook.png">
+        <meta property="og:image" content="http://www.kvartersregeringen.se/static/img/facebook2.png">
         <meta property="og:url" content="http://www.kvartersregeringen.se">
         <meta property="og:type" content="website">
         <meta property="fb:admins" content="532077412" />
