--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
         <link rel='stylesheet' href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css'>
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700'>
 
+        <link rel='stylesheet' href='static/css/jquery-ui-1.10.4.custom.css'>
         <link rel="stylesheet" href="static/css/bootstrap.min.css">
         <link rel="stylesheet" href="static/css/main.css">
 
@@ -98,8 +99,9 @@
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="static/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
+        <script src="static/js/vendor/jquery-ui-1.10.4.custom.min.js"></script>
         <script src="static/js/vendor/bootstrap.min.js"></script>
         <script src="static/js/main.js"></script>
 
