--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
                 <h2>Kvartersregeringen</h2>
                 <h1>Hur skulle regeringen se ut om ditt kvarter fick bestämma?</h1>
                 <div class="form-group">
-                    <input type="text" class="form-control input-lg" placeholder="Vilken gata och ort bort du på?">
+                    <input type="text" class="form-control input-lg" placeholder="Vilken gata och ort bor du på?">
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-primary btn-lg btn-block" value="Visa den dystra sanningen" />
@@ -65,10 +65,10 @@
                 <div id="search-again-form" style="display: none;">
                     <form role="form">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Var bor du?">
+                            <input type="text" class="form-control" placeholder="Vilken gata och ort bor du på?">
                         </div>
                         <div class="form-group">
-                            <input type="submit" class="btn btn-primary" value="Se om det är lika dystert"/>
+                            <input type="submit" class="btn btn-primary btn-block" value="Se om det är lika dystert"/>
                         </div>
                     </form>
                 </div>
