Add example addresses to front page

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,14 @@
                     <input type="submit" class="btn btn-primary btn-lg btn-block" value="Visa den dystra sanningen" />
                     <div class="spinner"></div>
                 </div>
+                <div class="examples">
+                    <div class="show">Psst, här är några exempel på spännande adresser att söka på.</div>
+                    <ul class="list-of-examples" style="display:none;">
+                        <li><a href="#">Slottsbacken, Stockholm</a> (om Kungen fick rösta)</li>
+                        <li><a href="#">Storgatan, Svedala</a> (en våt SD-dröm)</li>
+                        <li><a href="#">Galateagatan, Göteborg</a> (Gustav Fridolin for president)</li>
+                    </ul>
+                </div>
             </form>
         </div>
 
