Copy tweak for aesthetics

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
                     <div class="spinner"></div>
                 </div>
                 <div class="examples">
-                    <div class="show">Psst, här är några exempel på spännande adresser att söka på.</div>
+                    <div class="show">Psst, här är några spännande adresser att söka på.</div>
                     <ul class="list-of-examples" style="display:none;">
                         <li><a href="#">Slottsbacken, Stockholm</a> (om Kungen fick rösta)</li>
                         <li><a href="#">Storgatan, Svedala</a> (en våt SD-dröm)</li>
